# marketblocks

./: CMakeLists.txt  CMakeSettings.json  CryptoBot.sln  README.md
src/: CMakeLists.txt  data.h  main.cpp  runner.h  trading.h
src/common/csv/: csv.cpp  csv.h  csv_row.cpp  csv_row.h
src/common/exceptions/: cb_exception.h  mb_exception.h  not_implemented_exception.h  validation_exception.h
src/common/file/: config_file_reader.cpp  config_file_reader.h  file.cpp  file.h  json.cpp  json.h  json_iterator.cpp  json_iterator.h  json_wrapper.cpp  json_wrapper.h  local_directory.cpp  local_directory.h
src/common/json/: json.cpp  json.h  json_constants.h  json_iterator.cpp  json_iterator.h  json_writer.cpp  json_writer.h
src/common/security/: encoding.cpp  encoding.h  hash.cpp  hash.h
src/common/trading/: asset_symbol.cpp  fee_schedule.cpp  fee_schedule.h  order_book.cpp  order_book.h  tradable_pair.cpp  tradable_pair.h  trade_description.cpp  trade_description.h  trading_constants.h  trading_options.cpp  trading_options.h
src/common/types/: basic_iterator.h  concurrent_wrapper.h  partial_data_result.h  proxy.h  result.h  set_queue.h  thread_safe_wrapper.h  unordered_string_map.h
src/common/utils/: containerutils.h  financeutils.cpp  financeutils.h  generalutils.cpp  generalutils.h  mathutils.cpp  mathutils.h  retry.h  stringutils.cpp  stringutils.h  timeutils.cpp  timeutils.h  vectorutils.h
src/exchanges/: dummy_exchange.cpp  dummy_exchange.h  exchange.cpp  exchange.h  exchange_assemblers.cpp  exchange_assemblers.h  exchange_common.h  exchange_constants.h  exchange_factories.cpp  exchange_factories.h  exchange_helpers.cpp  exchange_helpers.h  exchange_id.cpp  exchange_id.h  exchange_ids.cpp  exchange_ids.h  exchange_status.cpp  exchange_status.h  market_data.h  multi_component_exchange.h  trader.h
src/exchanges/binance/: binance.cpp  binance.h  binance_config.cpp  binance_config.h  binance_order_filters.h  binance_results.cpp  binance_results.h  binance_websocket.cpp  binance_websocket.h
src/exchanges/bybit/: bybit.cpp  bybit.h  bybit_config.cpp  bybit_config.h  bybit_results.cpp  bybit_results.h  bybit_websocket.cpp  bybit_websocket.h
src/exchanges/coinbase/: coinbase.cpp  coinbase.h  coinbase_config.cpp  coinbase_config.h  coinbase_results.cpp  coinbase_results.h  coinbase_websocket.cpp  coinbase_websocket.h
src/exchanges/dextrade/: dextrade.cpp  dextrade.h  dextrade_config.cpp  dextrade_config.h  dextrade_results.cpp  dextrade_results.h
src/exchanges/digifinex/: digifinex.cpp  digifinex.h  digifinex_config.cpp  digifinex_config.h  digifinex_results.cpp  digifinex_results.h  digifinex_websocket.cpp  digifinex_websocket.h
src/exchanges/kraken/: kraken.cpp  kraken.h  kraken_config.cpp  kraken_config.h  kraken_results.cpp  kraken_results.h  kraken_websocket.cpp  kraken_websocket.h
src/exchanges/paper_trader/: paper_trader.cpp  paper_trader.h
src/exchanges/paper_trading/: paper_trader.cpp  paper_trader.h  paper_trading_config.cpp  paper_trading_config.h
src/exchanges/template/: template.cpp  template.h  template_config.cpp  template_config.h  template_results.cpp  template_results.h  template_websocket.cpp  template_websocket.h
src/exchanges/websockets/: exchange_websocket_stream.cpp  exchange_websocket_stream.h  local_order_book.cpp  local_order_book.h  ohlcv_subscription_service.cpp  ohlcv_subscription_service.h  order_book_cache.cpp  order_book_cache.h  websocket_stream.cpp  websocket_stream.h  websocket_stream_constants.cpp  websocket_stream_constants.h  websocket_stream_implementation.h  websocket_subscription.h  websocket_update_messages.h
src/logging/: logger.cpp  logger.h
src/misc/: data.h  options.h  trading.cpp  trading.h
src/networking/: httpconstants.h  httpservice.cpp  httpservice.h  json_wrapper.cpp  uri.cpp  uri.h  url.cpp  url.h
src/networking/http/: http_constants.h  http_error.h  http_header.cpp  http_header.h  http_request.cpp  http_request.h  http_response.cpp  http_response.h  http_service.cpp  http_service.h
src/networking/websocket/: websocket_client.cpp  websocket_client.h  websocket_connection.cpp  websocket_connection.h  websocket_constants.h  websocket_error.h
src/runner/: back_test_runner.cpp  back_test_runner.h  backtest_runner.cpp  backtest_runner.h  config_file_reader.cpp  config_file_reader.h  default_runner.cpp  default_runner.h  exchange_assemblers.cpp  exchange_assemblers.h  exchange_factory.cpp  exchange_factory.h  live_runner.h  live_test_runner.cpp  live_test_runner.h  runner.cpp  runner.h  runner_config.cpp  runner_config.h  runner_implementation.h  runner_initialise.cpp  runner_initialise.h  strategy_initialiser.h
src/runner/initialise/: config_file_readers.cpp  config_file_readers.h  configs.cpp  configs.h  exchange_assemblers.cpp  exchange_assemblers.h  exchange_factories.cpp  exchange_factories.h  (+4 more)
src/strategies/: test_strategy.cpp  test_strategy.h  tri_arb.cpp  tri_arb.h
src/trading/: asset_symbol.cpp  asset_symbol.h  fee_schedule.cpp  fee_schedule.h  historical_trade.cpp  historical_trade.h  moving_candle.cpp  moving_candle.h  ohlc_data.h  ohlcv_data.cpp  ohlcv_data.h  ohlcv_from_trades.cpp  ohlcv_from_trades.h  order_book.cpp  order_book.h  order_confirmation.cpp  order_confirmation.h  order_description.cpp  order_description.h  order_request.cpp  order_request.h  order_type.h  pair_stats.h  ticker_data.cpp  ticker_data.h  tradable_pair.cpp  tradable_pair.h  trade_description.cpp  trade_description.h  trade_update.h  trading_constants.h  trading_options.cpp  trading_options.h
src/utils/: containerutils.h  financeutils.cpp  financeutils.h  mathutils.h  stringutils.h  vectorutils.h
test/: CMakeLists.txt
test/configs/: bybit.json  dextrade.json
test/integration/: coinbase_test.cpp  kraken_test.cpp
test/test_data/: test_data_constants.cpp  test_data_constants.h
test/unittest/: assertion_helpers.cpp  assertion_helpers.h  common_matchers.h  mocks.h
tests/: CMakeLists.txt
tests/configs/: binance.json  bybit.json
tests/mbtest/: assertion_helpers.cpp  common.h  matchers.h  mocks.h
(+339 files in other folders)
